--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,8 @@ num2words>=0.5.14
 addict>=2.4.0
 loguru>=0.7.3
 win32-setctime>=1.2.0
+
+# GPU Support for GGUF Models
+#llama-cpp-python==0.3.16 [official version is not working manually get it from here https://github.com/JamePeng/llama-cpp-python/releases]
+requests>=2.31.0
+tqdm>=4.67.1
