--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,7 @@
-flask==2.3.3
 torch>=2.0.0
-transformers>=4.30.0
-accelerate>=0.20.0
-numpy>=1.21.0
+kokoro>=0.9.4
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+websockets>=11.0
 soundfile>=0.12.0
-gradio>=3.35.0
-
-# Kokoro TTS Dependencies
-kokoro>=0.9.2
-huggingface_hub>=0.20.0
-spacy>=3.8.0
-spacy-curated-transformers>=0.3.0
-curated-transformers>=0.1.0
-curated-tokenizers>=0.0.9
-misaki[en]>=0.9.4
-espeakng-loader>=0.2.4
-phonemizer-fork>=3.3.0
-num2words>=0.5.14
-addict>=2.4.0
-loguru>=0.7.3
-win32-setctime>=1.2.0
-
-# GPU Support for GGUF Models
-#llama-cpp-python==0.3.16 [official version is not working manually get it from here https://github.com/JamePeng/llama-cpp-python/releases]
-requests>=2.31.0
-tqdm>=4.67.1
+numpy>=1.24.0
